Tooltips added, and param keys and values are now truncated to prevent overflowing.

--- a/ui/index.css
+++ b/ui/index.css
@@ -1,3 +1,11 @@
+.panel {
+	/*min-width: 40em;*/
+}
+
+.panel-body {
+	word-break:break-all;
+}
+
 .navbar {
 	background: white;
 }
